--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moobarn",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "MOO Bridge API for React and Node",
   "private": false,
   "repository": {
@@ -31,6 +31,7 @@
     "pm2-start": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
+    "@digibear/socket-bridge": "^1.0.6",
     "@hapi/cookie": "^11.0.2",
     "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.4",
