--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moobarn",
-  "version": "0.9.5",
+  "version": "0.9.6",
   "description": "MOO Bridge API for React and Node",
   "private": false,
   "repository": {
@@ -27,8 +27,9 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "start": "node index.js",
-    "pm2-start": "pm2 start ecosystem.config.js",
-    "update-submodules": "git submodule update --remote"
+    "pm2-start": "gatsby build && pm2 start ecosystem.config.js",
+    "update-submodules": "git submodule update --remote",
+    "postinstall": "gatsby build"
   },
   "dependencies": {
     "@digibear/socket-bridge": "^1.0.6",
